[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/ChatterCanvas.gd" type="Script" id=1]
[ext_resource path="res://GUI/chatPanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.105882, 0.0901961, 0.0901961, 1 )

[node name="ChatterCanvas" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_top = 0.00117849
anchor_bottom = 0.00117849
margin_left = -1.19238
margin_top = 3.05022
margin_right = 503.808
margin_bottom = 421.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colorLabel" type="Label" parent="Control"]
margin_left = 239.709
margin_top = 358.503
margin_right = 279.709
margin_bottom = 372.503
text = "Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optColors" type="OptionButton" parent="Control/colorLabel"]
anchor_right = 0.014
anchor_bottom = 0.017
margin_left = 45.1716
margin_top = -1.25841
margin_right = 205.836
margin_bottom = 18.5036
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statusLabel" type="Label" parent="Control"]
margin_left = 243.0
margin_top = 389.0
margin_right = 308.0
margin_bottom = 403.0
text = "STATUS: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statusText" type="Label" parent="Control/statusLabel"]
anchor_left = -0.025713
anchor_right = -0.025713
margin_left = 58.6898
margin_top = -1.41422
margin_right = 113.69
margin_bottom = 12.5858
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hostButton" type="Button" parent="Control"]
margin_left = 55.2218
margin_top = 80.0569
margin_right = 123.222
margin_bottom = 105.057
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinButton" type="Button" parent="Control"]
margin_left = 140.782
margin_top = 80.0569
margin_right = 208.782
margin_bottom = 105.057
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chatPanel" type="Panel" parent="Control"]
margin_left = 59.0
margin_top = 144.293
margin_right = 298.0
margin_bottom = 322.293
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtChatHistory" type="RichTextLabel" parent="Control/chatPanel"]
margin_right = 236.0
margin_bottom = 178.0
custom_styles/normal = SubResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sendButton" type="Button" parent="Control/chatPanel"]
margin_left = 1.17157
margin_top = 209.709
margin_right = 68.1716
margin_bottom = 238.709
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itlUsers" type="ItemList" parent="Control/chatPanel"]
margin_left = 240.808
margin_top = 0.999985
margin_right = 345.808
margin_bottom = 179.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtMessage" type="TextEdit" parent="Control/chatPanel"]
margin_top = 177.484
margin_right = 232.0
margin_bottom = 202.484
text = "Type Message Here"

[node name="txtIP" type="TextEdit" parent="Control"]
margin_left = 58.0
margin_top = 110.95
margin_right = 296.0
margin_bottom = 141.95
text = "Enter LAN IP address to join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitButton" type="Button" parent="Control"]
anchor_left = -0.00295855
anchor_right = -0.00295855
margin_left = 303.787
margin_top = 324.293
margin_right = 403.787
margin_bottom = 345.293
text = "Exit Chat"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Control/colorLabel/optColors" to="." method="_on_optColors_item_selected"]
[connection signal="pressed" from="Control/hostButton" to="." method="_on_hostButton_pressed"]
[connection signal="pressed" from="Control/joinButton" to="." method="_on_joinButton_pressed"]
[connection signal="pressed" from="Control/chatPanel/sendButton" to="Control/chatPanel" method="_on_sendButton_pressed"]
[connection signal="item_selected" from="Control/chatPanel/itlUsers" to="Control/chatPanel" method="_on_itlUsers_item_selected"]
[connection signal="pressed" from="Control/exitButton" to="." method="_on_exitButton_pressed"]
